--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -82,8 +82,9 @@
                     </li>{% endif %}
 				</ul><!-- /.dl-submenu -->
 			</li>
+			<li><a href="{{ site.url }}/team/">Team</a></li>
 			<li>
-				<a href="#">Posts</a>
+				<a href="#">Blog</a>
 				<ul class="dl-submenu">
 					<li><a href="{{ site.url }}/posts/">All Posts</a></li>
 					<li><a href="{{ site.url }}/tags/">All Tags</a></li>
@@ -95,7 +96,7 @@
 		        {% else %}
 		        {% assign domain = site.url %}
 		    {% endif %}
-		    <li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' %}target="_blank" rel="noopener noreferrer"{% endif %}>{{ link.title }}</a></li>
+		    <li><a href="{{ site.url }}/contact/">Contact</a></li>
 		  {% endfor %}
 		</ul><!-- /.dl-menu -->
 	</nav><!-- /.dl-menuwrapper -->
