--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,48 +1,31 @@
 <!-- Team Section -->
-    <section id="team" class="bg-light-gray">
+    <section id="team">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Leaders</h2>
-                    <h3 class="section-subheading text-muted"> Stuff to fill if necessary</h3>
+                    <h1 class="section-heading">Leaders</h1>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4">
+                {% for member in site.people %}
                     <div class="team-member">
-                        <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Lakshmi Venkat</h4>
-                        <p class="text-muted">Chairman & Managing Director</p>
-                        <ul class="list-inline social-buttons">
+			<hr class="hr-line">
+                        <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt="{{ member.name }}">
+                        <h3>{{ member.name }}<br>
+                        <span>{{ member.position }}</span></h3>
+			<!---
+                        <ul class="list-inline" style="list-style: none;">
                             {% for network in member.social %}
                             <li>
-                                <a href="{{ network.url }}">
+                                <a href="{{ network.url }}" class="social-btn">
                                     <i class="fa fa-{{ network.title }}"></i>
                                 </a>
                             </li>
                             {% endfor %}
-
                         </ul>
+			--->
                     </div>
-                </div>
-		<div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Venkataraman KNK</h4>
-                        <p class="text-muted">President</p>
-                        <ul class="list-inline social-buttons">
-                            {% for network in member.social %}
-                            <li>
-                                <a href="{{ network.url }}">
-                                    <i class="fa fa-{{ network.title }}"></i>
-                                </a>
-                            </li>
-                            {% endfor %}
-
-                        </ul>
-                    </div>
-                </div>
-
+                {% endfor %}
             </div>
         </div>
     </section>
